Use https instead of http when infering missing protocol and removed deprecated URL ctor